2014-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): FILE_BUFFER argument removed.
	<--usage>: Display an error meesage if there is no node to give 
	a file to look for an invocation node.
	(initial_fb): Variable removed.

	* info/info.c (info_short_help),
	* doc/info-stnd.texi (Invoking Info): Document "info 
	'(file)node'" invocation.
	* doc/info-stnd.texi (Invoking Info): Refer to "search path" 
	instead of "INFOPATH".
	(Node Commands): Add "vi-like operation" for a binding.

2014-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (get_initial_file) <file name lookup>,
	(main) <--file>, <'(file)node' as first argument>: Add a node to 
	ref_list from the file we found.
	(add_initial_nodes): Don't fall back to a "Top" node as it 
	should already be in ref_list.  If any "--node" argument given, 
	discard the first element of ref_list.

	* info/info-utils.c (info_new_reference): Duplicate arguments 
	into new storage.  All callers updated.

2014-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (main) <--all not used>: Check if the first 
	non-option argument is of the form "(file)node", and if so add 
	it to the list of nodes to start with.
	(add_initial_nodes) <user_nodenames>: Duplicate filename string.  
	Allow nodename to be empty.
	<following menus>: Use a node from our list of initial nodes to 
	start at if initial_file is null.

	* info/t/spec-file-node.sh, info/t/spec-no-node.sh, 
	info/t/spec-menu.sh: New tests.

	* info/info.c (get_initial_file): Don't take a user-specified 
	filename as an argument.
	<--file>: Moved to main.

2014-10-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Node Line Requirements, Writing a Menu):
	menu entries need exact spacing for the sake of Emacs Info.

2014-10-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search): Call 
	info_indices_of_file_buffer before prompting user.  Display an 
	error message if no index is found.